--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   z-index: -1;
-  background:#ffffff;
+  background: #000;
 }
 
 /* Glitch effect on hover for services */
@@ -304,7 +304,7 @@ header {
 }
 
 .hero-overlay {
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 0, 0.5);
     padding: 40px 20px;
     width: 60%;
     text-align: center;
@@ -319,7 +319,7 @@ header {
 }
 
 .hero-text h1, .hero-text p {
-    opacity: 0.8;
+    opacity: 0;
     transform: translateY(20px);
     animation: textAnimation 1s ease-out 6.2s forwards;
 }
@@ -348,13 +348,13 @@ header {
 
 .hero-text h1 {
     font-size: 2.5em;
-    color: #000;
+    color: #fff;
     margin-bottom: 10px;
 }
 
 .hero-text p {
     font-size: 1.2em;
-    color: #000;
+    color: #fff;
 }
 
 .about {
