--- a/style.css
+++ b/style.css
@@ -78,12 +78,12 @@ nav a:hover {
 .icon {
   width: 24px;
   height: auto;
-  color: #ddc700;
+  color: #333;
 }
 
 .icon.fa-yelp {
   font-size: 1.5em;
-  color: #000000;
+  color: #333;
 }
 
 /* Hero */
@@ -529,6 +529,7 @@ section.visible {
     font-size: 1.5em;
   }
 
+  .hero strum
   .hero-text p {
     font-size: 0.9em;
   }
@@ -566,4 +567,3 @@ section.visible {
     height: 100px;
   }
 }
-
